Fixed some responsive ui issues on mobile devices

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -5,7 +5,7 @@
 
 @layer components{
     .heroButton{
-        @apply px-4 py-1 sm:px-6 sm:py-2 border border-[#242424] rounded-full uppercase text-sm 
+        @apply px-4 py-1 sm:px-6 sm:py-2 border border-[#242424] rounded-full uppercase text-[11px] sm:text-sm 
         sm:tracking-widest  text-gray-500 transition-all
         hover:border-[#F7AB0A]/40 hover:text-[#F7AB0A]/40
     }
